--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -66,6 +66,20 @@ anstream.workspace = true
 anstyle.workspace = true
 terminal_size.workspace = true
 
+# Bitfinity dependencies
+revm = { workspace = true, features = [
+    "std",
+    "serde",
+    "memory_limit",
+    "optional_eip3607",
+    "optional_block_gas_limit",
+    "optional_no_base_fee",
+    "arbitrary",
+    "optimism",
+    "c-kzg",
+    "blst",
+] }
+
 [dev-dependencies]
 foundry-macros.workspace = true
 similar-asserts.workspace = true
